@@ -113,25 +113,28 @@ seahorse_nautilus_get_file_items (NautilusMenuProvider *provider,
 {
     NautilusMenuItem *item;
     GList *items = NULL;
+    guint num;
+    
+    num = g_list_length (files);
     
     /* No files */
-    if (g_list_length (files) == 0)
+    if (num == 0)
         return NULL;
     
     /* A single encrypted file, no menu items */
-    if (g_list_length (files) == 1 && 
+    if (num == 1 && 
         is_mime_type ((NautilusFileInfo*)files->data, pgp_encrypted_types))
         return NULL;
      
      item = nautilus_menu_item_new ("NautilusSh::crypt", _("Encrypt..."),
-                                        _("Encrypt the selected archive"), NULL);
+         ngettext ("Encrypt the selected file", "Encrypt the selected files", num), NULL);
      g_signal_connect (item, "activate", G_CALLBACK (crypt_callback), provider);
      g_object_set_data_full (G_OBJECT (item), "files", nautilus_file_info_list_copy (files),
                                  (GDestroyNotify) nautilus_file_info_list_free);
      items = g_list_append (items, item);
 
      item = nautilus_menu_item_new ("NautilusSh::sign", _("Sign..."),
-                                        _("Sign the selected archive"), NULL);
+         ngettext ("Sign the selected file", "Sign the selected files", num), NULL);
      g_signal_connect (item, "activate", G_CALLBACK (sign_callback), provider);
      g_object_set_data_full (G_OBJECT (item), "files", nautilus_file_info_list_copy (files),
                                  (GDestroyNotify) nautilus_file_info_list_free);
