@@ -1,3 +1,8 @@
+2005-05-19  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * plugins/nautilus-ext/seahorse-nautilus.c: Clearer status messages
+    for nautilus plugin.
+    
 2005-05-18  Nate Nielsen  <nielsen@memberwebs.com>
 
 	* libseahorse/seahorse-widget.c: 
